--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
         <module>core</module>
         <module>api</module>
         <module>starter</module>
+        <module>service</module>
+        <module>common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -25,6 +27,7 @@
         <gson.version>2.9.1</gson.version>
         <opencsv.version>5.3</opencsv.version>
         <aspectjweaver.version>1.9.7</aspectjweaver.version>
+        <orika-core.version>1.5.1</orika-core.version>
 
     </properties>
 
@@ -44,6 +47,16 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>starter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>common</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
@@ -77,6 +90,11 @@
             <version>${aspectjweaver.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>${orika-core.version}</version>
+        </dependency>
 
     </dependencies>
 
