--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <opencsv.version>5.3</opencsv.version>
         <aspectjweaver.version>1.9.7</aspectjweaver.version>
         <orika-core.version>1.5.1</orika-core.version>
+        <joda-time.version>2.10.10</joda-time.version>
+        <lombok.version>1.18.22</lombok.version>
 
     </properties>
 
@@ -95,6 +97,16 @@
             <artifactId>orika-core</artifactId>
             <version>${orika-core.version}</version>
         </dependency>
+
+        <!-- 时间处理 -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
