--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <skywalking.version>8.7.0</skywalking.version>
         <transmittable-thread-local.version>2.11.5</transmittable-thread-local.version>
         <mybaits.plus.version>3.4.2</mybaits.plus.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
 
     </properties>
 
@@ -126,6 +127,14 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybaits.plus.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
