--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <transmittable-thread-local.version>2.11.5</transmittable-thread-local.version>
         <mybaits.plus.version>3.4.2</mybaits.plus.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
 
     </properties>
 
@@ -126,6 +127,13 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybaits.plus.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-java.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
