--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -1,3 +1,32 @@
 
+################################设置日志级别的方式######################################################
 ##mongo打印查询日志
 logging.level.org.springframework.data.mongodb.core= DEBUG
+
+##apollo服务未开启，会一直打印warn日志，关掉
+logging.level.com.ctrip.framework.apollo = ERROR
+
+
+
+
+
+################ Redis 基础配置   ：https://juejin.cn/post/6844903962504609805  ##############
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=zwqh
+# 链接超时时间 单位 ms（毫秒）
+spring.redis.timeout=3000
+################ Redis 线程池设置 ##############
+# 连接池最大连接数（使用负值表示没有限制） 默认 8
+spring.redis.lettuce.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+spring.redis.lettuce.pool.max-wait=-1
+# 连接池中的最大空闲连接 默认 8
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接 默认 0
+spring.redis.lettuce.pool.min-idle=0
