--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <mybaits.plus.version>3.4.2</mybaits.plus.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
+        <commons-pool2.version>2.6.2</commons-pool2.version>
 
     </properties>
 
@@ -143,7 +144,15 @@
                 <version>${commons-lang3.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
 </project>
+
+
