--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=zwqh
+#spring.redis.password=zwqh
 # 链接超时时间 单位 ms（毫秒）
 spring.redis.timeout=3000
 ################ Redis 线程池设置 ##############
