--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -6,6 +6,9 @@ logging.level.org.springframework.data.mongodb.core= DEBUG
 ##apollo服务未开启，会一直打印warn日志，关掉
 logging.level.com.ctrip.framework.apollo = ERROR
 
+###关掉kafka的日志
+logging.level.org.apache.kafka.clients.NetworkClient = ERROR
+
 
 
 
