--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
         <commons-pool2.version>2.6.2</commons-pool2.version>
+        <apm-toolkit-logback.version>8.6.0</apm-toolkit-logback.version>
+        <logstash-logback-encoder.version>7.0.1</logstash-logback-encoder.version>
 
     </properties>
 
@@ -115,6 +117,18 @@
                 <artifactId>apm-toolkit-trace</artifactId>
                 <version>${skywalking.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.skywalking</groupId>
+                <artifactId>apm-toolkit-logback-1.x</artifactId>
+                <version>${apm-toolkit-logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash-logback-encoder.version}</version>
+            </dependency>
+
 
             <!-- https://mvnrepository.com/artifact/com.alibaba/transmittable-thread-local -->
             <dependency>
