--- a/starter/src/main/resources/application.yml
+++ b/starter/src/main/resources/application.yml
@@ -44,6 +44,7 @@ spring:
 
 
   #kafka
+  #启动kafka,先进入zk的目录，点击zkServer.cmd  然后进入kafka的目录，进入终端   bin\windows\kafka-server-start.bat config\server.properties
   kafka:
     bootstrap-servers: localhost:9092
     producer:
