--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <commons-pool2.version>2.6.2</commons-pool2.version>
         <apm-toolkit-logback.version>8.6.0</apm-toolkit-logback.version>
         <logstash-logback-encoder.version>7.0.1</logstash-logback-encoder.version>
+        <rocketmq.version>2.2.1</rocketmq.version>
 
     </properties>
 
@@ -162,6 +163,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-pool2</artifactId>
                 <version>${commons-pool2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.version}</version>
             </dependency>
 
         </dependencies>
