ADD:新增server module 用于学习netty编程

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>starter</module>
         <module>service</module>
         <module>common</module>
+        <module>server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
