--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
         <commons-text.version>1.9</commons-text.version>
         <swagger-annotations.version>1.6.2</swagger-annotations.version>
+        <netty.version>4.1.6.Final</netty.version>
     </properties>
 
 
@@ -183,6 +184,11 @@
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
                 <version>${rocketmq.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
 
         </dependencies>
