--- a/starter/src/main/resources/application.yml
+++ b/starter/src/main/resources/application.yml
@@ -64,3 +64,8 @@ spring:
 
   application:
     name: own
+
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
