--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,11 @@
                 <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.opencsv</groupId>
+                <artifactId>opencsv</artifactId>
+                <version>5.3</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
