--- a/starter/src/main/resources/application.yml
+++ b/starter/src/main/resources/application.yml
@@ -69,3 +69,8 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+mysql:
+  batch:
+    enable: "true"
