--- a/service/pom.xml
+++ b/service/pom.xml
@@ -27,6 +27,19 @@
             <artifactId>common</artifactId>
         </dependency>
 
+        <!-- iot-auth-api -->
+        <dependency>
+            <groupId>com.ecoflow.iot</groupId>
+            <artifactId>auth-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+        <!-- export-api -->
+        <dependency>
+            <groupId>com.ecoflow</groupId>
+            <artifactId>export-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
 
         <!--app-->
         <dependency>
@@ -71,6 +84,41 @@
             <version>${ecoflow.version}</version>
         </dependency>
 
+       <!--  iot-bridge-api-->
+        <dependency>
+            <groupId>com.ecoflow</groupId>
+            <artifactId>iot-bridge-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+        <!-- blackbox-api -->
+        <dependency>
+            <groupId>com.ecoflow.iot</groupId>
+            <artifactId>blackbox-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+<!--        scene-api-->
+        <dependency>
+            <groupId>com.ecoflow.iot</groupId>
+            <artifactId>iot-scene-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+<!--        ota-api-->
+        <dependency>
+            <groupId>com.ecoflow.iot</groupId>
+            <artifactId>ota-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+        <!-- open-api -->
+        <dependency>
+            <groupId>com.ecoflow.iot</groupId>
+            <artifactId>open-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
         <!-- auth-api -->
         <dependency>
             <groupId>com.ecoflow.iot</groupId>
@@ -106,11 +154,36 @@
             <version>${ecoflow.version}</version>
         </dependency>
 
+        <!-- general -->
         <dependency>
             <groupId>com.ecoflow</groupId>
             <artifactId>general-api</artifactId>
             <version>${ecoflow.version}</version>
         </dependency>
+
+<!--        system-api-->
+        <dependency>
+            <groupId>com.ecoflow</groupId>
+            <artifactId>ecoflow-system-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+<!--        tou-api-->
+        <dependency>
+            <groupId>com.ecoflow.tou</groupId>
+            <artifactId>tou-api</artifactId>
+            <version>${ecoflow.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/me.zhyd.oauth/JustAuth -->
+        <dependency>
+            <groupId>me.zhyd.oauth</groupId>
+            <artifactId>JustAuth</artifactId>
+            <version>1.16.4</version>
+        </dependency>
+
+
+
 
 
         <dependency>
